--- a/results-summary-component-main/style.css
+++ b/results-summary-component-main/style.css
@@ -84,3 +84,134 @@ body{
         place-items: center;
     }
 }
+
+.section-title{
+    font-weight: var(--fw-bold);
+    font-size: var(--fs-600);
+}
+
+.button{
+    color: var(--clr-neutral-100);
+    line-height: 1;
+    background-color: var(--clr-neutral-700);
+    padding: 1rem 2rem;
+    border: 0;
+    border-radius: 100vw;
+    cursor: pointer;
+}
+
+
+.button:hover,.button:focus-visible{
+    background: var(--gradient-primary);
+}
+
+.result-summary{
+    --border-radius: 2rem;
+    --padding:2.5rem;
+    max-width: 46rem;
+    display: grid;
+}
+
+@media (min-width:600px) {
+    .result-summary{
+        margin-inline : 1rem;
+        grid-template-columns: 1fr 1fr;
+        border-radius: var(--border-radius);
+        overflow: hidden;
+        box-shadow: .5rem 1rem 3rem 
+          hsl(var(--clr-neutral-hsl-700), .2);
+    }
+}
+
+.results{
+    color: hsl(var(--clr-neutral-hsl-100), .7);
+    text-align: center;
+    background: var(--gradient-primary);
+    border-radius: 0 0 var(--border-radius) var(--border-radius);
+}
+
+.results,.summary{
+    padding: var(--padding);
+}
+
+@media (min-width:600px) {
+    .results{
+        border-radius: var(--border-radius);
+    }
+}
+
+.grid-flow{
+    display: grid;
+    gap: 1rem;
+    align-content: start;
+}
+
+.grid-flow[data-spacing='large']{
+    gap: 2rem;
+}
+
+
+.result-score{
+    display: grid;
+    place-content: center;
+    width: 12rem;
+    margin-inline: auto;
+    background: var(--gradient-to-transparent);
+    aspect-ratio: 1/1;
+    border-radius: 50%;
+}
+
+.result-score span{
+    display: block;
+    font-size: var(--fs-900); 
+    font-weight: var(--fw-black);
+    line-height: 1;
+    color: var(--clr-neutral-100); 
+}
+
+.result-rank {
+    color: var(--clr-neutral-100);
+    font-size: var(--fs-700);
+    font-weight: var(--fw-bold);
+  }
+
+
+.summary-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
+    border-radius: .5rem;
+    background-color: hsl(var(--item-color), .1);
+}
+
+.flex-group {
+    display: flex;
+    align-items: center;
+    gap: .5rem;
+    flex-wrap: wrap;
+  }
+
+  .summary-item svg {
+    stroke: hsl(var(--item-color));
+  }
+
+  .summary-item-title {
+    color: hsl(var(--item-color));
+    font-weight: var(--fw-bold);
+  } 
+  
+  
+
+.summary-item[data-item-type="accent-1"] {
+    --item-color: var(--clr-accent-1);
+  }
+  .summary-item[data-item-type="accent-2"] {
+    --item-color: var(--clr-accent-2);
+  }
+  .summary-item[data-item-type="accent-3"] {
+    --item-color: var(--clr-accent-3);
+  }
+  .summary-item[data-item-type="accent-4"] {
+    --item-color: var(--clr-accent-4);
+  }
