--- a/easybank-landing-page-master/app/scss/_globals.scss
+++ b/easybank-landing-page-master/app/scss/_globals.scss
@@ -15,3 +15,20 @@ body {
   line-height: 1.3;
   font-family: "Public Sans", sans-serif;
 }
+
+// Flexbox
+.flex {
+  display: flex;
+
+  &-jc-sb {
+    justify-content: space-between;
+  }
+
+  &-jc-c {
+    justify-content: center;
+  }
+
+  &-ac-c {
+    align-items: center;
+  }
+}
