--- a/easybank-landing-page-master/app/scss/_globals.scss
+++ b/easybank-landing-page-master/app/scss/_globals.scss
@@ -14,6 +14,13 @@ body {
   padding: 0;
   line-height: 1.3;
   font-family: "Public Sans", sans-serif;
+  font-size: $font-med;
+}
+
+a,
+a:visited,
+a:hover {
+  text-decoration: none;
 }
 
 // Flexbox
@@ -28,7 +35,7 @@ body {
     justify-content: center;
   }
 
-  &-ac-c {
+  &-ai-c {
     align-items: center;
   }
 }
