added cta and styling it

--- a/easybank-landing-page-master/app/scss/_header.scss
+++ b/easybank-landing-page-master/app/scss/_header.scss
@@ -26,6 +26,12 @@
   &__links {
     a {
       font-size: $font-sm;
+      color: $grayishBlue;
     }
+  }
+
+  &__cta {
+    font-size: $font-sm;
+    color: #fff;
   }
 }
