--- a/easybank-landing-page-master/app/scss/_globals.scss
+++ b/easybank-landing-page-master/app/scss/_globals.scss
@@ -15,6 +15,8 @@ body {
   line-height: 1.3;
   font-family: "Public Sans", sans-serif;
   font-size: $font-med;
+  font-weight: 300;
+  color: $grayishBlue;
 }
 
 a,
@@ -38,4 +40,25 @@ a:hover {
   &-ai-c {
     align-items: center;
   }
+}
+
+// Buttons
+button,
+.button {
+  padding: 1rem 1.875rem;
+  border-radius: 50px;
+  cursor: pointer;
+  background: linear-gradient(to right, $limeGreen, $brightCyan);
+  border: 0;
+  color: #fff;
+  font-weight: 400;
+}
+
+// Visiblity
+.hide-for-mobile {
+  // hide for tablet and mobile devices
+}
+
+.hide-for-desktop {
+  // hide for desktop
 }
