--- a/easybank-landing-page-master/app/scss/_globals.scss
+++ b/easybank-landing-page-master/app/scss/_globals.scss
@@ -58,8 +58,14 @@ button,
 // Visiblity
 .hide-for-mobile {
   // hide for tablet and mobile devices
+  @include breakpoint-down(medium) {
+    display: none;
+  }
 }
 
 .hide-for-desktop {
-  // hide for desktop
+  // hide for desktop viewport widths
+  @include breakpoint-up(large) {
+    display: none;
+  }
 }
