--- a/easybank-landing-page-master/app/scss/_header.scss
+++ b/easybank-landing-page-master/app/scss/_header.scss
@@ -82,3 +82,10 @@
     }
   }
 }
+
+.overlay {
+  position: fixed;
+  inset: 0;
+  top: 3.75rem;
+  background-image: linear-gradient($darkBlue, transparent);
+}
