Added animation in overlay

--- a/easybank-landing-page-master/app/scss/_header.scss
+++ b/easybank-landing-page-master/app/scss/_header.scss
@@ -1,4 +1,37 @@
 .header {
+  // Hamburger Open Styles
+
+  .overlay {
+    display: none;
+    position: fixed;
+    inset: 0;
+    top: 3.75rem;
+    background-image: linear-gradient($darkBlue, transparent);
+  }
+
+  &.open {
+    .header__menu {
+      > span {
+        &:first-child {
+          transform: rotate(45deg);
+        }
+
+        &:nth-child(2) {
+          opacity: 0;
+        }
+        &:last-child {
+          transform: rotate(-45deg);
+        }
+      }
+    }
+    .overlay {
+      display: block;
+      animation: fade-in 300ms ease-in-out forwards;
+    }
+  }
+
+  //
+
   nav {
     padding: 1.0625rem 1.5rem;
   }
@@ -23,21 +56,6 @@
 
       &:not(:last-child) {
         margin-bottom: 5px;
-      }
-    }
-
-    &.open {
-      > span {
-        &:first-child {
-          transform: rotate(45deg);
-        }
-
-        &:nth-child(2) {
-          opacity: 0;
-        }
-        &:last-child {
-          transform: rotate(-45deg);
-        }
       }
     }
   }
@@ -81,11 +99,4 @@
       opacity: 0.75;
     }
   }
-}
-
-.overlay {
-  position: fixed;
-  inset: 0;
-  top: 3.75rem;
-  background-image: linear-gradient($darkBlue, transparent);
 }
