added mobile menu stm and css

--- a/easybank-landing-page-master/app/scss/_globals.scss
+++ b/easybank-landing-page-master/app/scss/_globals.scss
@@ -55,6 +55,12 @@ button,
   font-size: $font-sm;
 }
 
+// spacing
+.container {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
 // Visiblity
 .hide-for-mobile {
   // hide for tablet and mobile devices
