--- a/easybank-landing-page-master/app/scss/_header.scss
+++ b/easybank-landing-page-master/app/scss/_header.scss
@@ -2,6 +2,7 @@
   // Hamburger Open Styles
 
   .overlay {
+    opacity: 0;
     position: fixed;
     inset: 0;
     top: 3.75rem;
@@ -9,7 +10,7 @@
   }
 
   &.open {
-    .header__menu {
+    .header__toggle {
       > span {
         &:first-child {
           transform: rotate(45deg);
@@ -31,7 +32,8 @@
   //
 
   nav {
-    padding: 1.0625rem 1.5rem;
+    padding-top: 1.0625rem;
+    padding-bottom: 1.0625rem;
   }
 
   &__logo {
@@ -41,7 +43,7 @@
     }
   }
 
-  &__menu {
+  &__toggle {
     // Mobile Menu
 
     > span {
@@ -55,6 +57,23 @@
       &:not(:last-child) {
         margin-bottom: 5px;
       }
+    }
+  }
+
+  &__menu {
+    position: absolute;
+    width: calc(100% - 3rem);
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: $white;
+    margin-top: 1.5rem;
+    padding: 1.625rem;
+    border-radius: 5px;
+    a {
+      display: block;
+      text-align: center;
+      color: $darkBlue;
+      padding: 0.625rem;
     }
   }
 
