Completed mobile nav with animation

--- a/easybank-landing-page-master/app/scss/_globals.scss
+++ b/easybank-landing-page-master/app/scss/_globals.scss
@@ -17,6 +17,10 @@ body {
   font-size: $font-med;
   font-weight: 300;
   color: $grayishBlue;
+
+  &.noscroll {
+    overflow: hidden;
+  }
 }
 
 a,
