--- a/easybank-landing-page-master/app/scss/_header.scss
+++ b/easybank-landing-page-master/app/scss/_header.scss
@@ -5,7 +5,6 @@
     opacity: 0;
     position: fixed;
     inset: 0;
-    top: 3.75rem;
     background-image: linear-gradient($darkBlue, transparent);
   }
 
@@ -32,6 +31,8 @@
   //
 
   nav {
+    position: relative;
+    background-color: $white;
     padding-top: 1.0625rem;
     padding-bottom: 1.0625rem;
   }
