--- a/easybank-landing-page-master/app/scss/_hero.scss
+++ b/easybank-landing-page-master/app/scss/_hero.scss
@@ -18,4 +18,17 @@
       height: 100%;
     }
   }
+  &__text {
+    text-align: center;
+    h1 {
+      color: $darkBlue;
+      font-size: 1.875rem;
+      font-weight: 300;
+      line-height: 1.15;
+      margin-bottom: 2.25rem;
+    }
+    p {
+      line-height: 1.5;
+    }
+  }
 }
