Text Section on Desktop

--- a/easybank-landing-page-master/app/scss/_globals.scss
+++ b/easybank-landing-page-master/app/scss/_globals.scss
@@ -18,6 +18,10 @@ body {
   font-weight: 300;
   color: $grayishBlue;
 
+  @include breakpoint-up(large) {
+    font-size: $font-med;
+  }
+
   &.noscroll {
     overflow: hidden;
   }
@@ -68,10 +72,35 @@ button,
 
 // spacing
 .container {
-  padding-top: 2.25rem;
-  padding-bottom: 2.25rem;
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
+  max-width: 69.375rem;
+  margin: auto;
+
+  &--pall {
+    padding-bottom: 2.25rem;
+    padding-top: 2.25rem;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+  &--py {
+    padding-bottom: 2.25rem;
+    padding-top: 2.25rem;
+  }
+  &--px {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+  &--pt {
+    padding-top: 2.25rem;
+  }
+  &--pb {
+    padding-bottom: 2.25rem;
+  }
+  &--pl {
+    padding-left: 1.5rem;
+  }
+  &--pr {
+    padding-right: 1.5rem;
+  }
 }
 
 // Visiblity
