--- a/easybank-landing-page-master/app/scss/_hero.scss
+++ b/easybank-landing-page-master/app/scss/_hero.scss
@@ -1,4 +1,8 @@
 .hero {
+  @include breakpoint-up(large) {
+    display: flex;
+    align-items: center;
+  }
   &__image {
     position: relative;
     background-image: url("../../images/bg-intro-mobile.svg");
@@ -17,6 +21,14 @@
       width: 100%;
       height: 100%;
     }
+
+    @include breakpoint-up(large) {
+      flex: 3;
+      order: 2;
+      min-height: 41rem;
+      background-image: url("../../images/bg-intro-desktop.svg");
+      background-position: left center;
+    }
   }
   &__text {
     text-align: center;
@@ -26,9 +38,18 @@
       font-weight: 300;
       line-height: 1.15;
       margin-bottom: 2.25rem;
+      @include breakpoint-up(large) {
+        font-size: $font-xlg;
+      }
     }
     p {
       line-height: 1.5;
+    }
+
+    @include breakpoint-up(large) {
+      flex: 2;
+      order: 1;
+      text-align: left;
     }
   }
 }
