--- a/easybank-landing-page-master/app/scss/_hero.scss
+++ b/easybank-landing-page-master/app/scss/_hero.scss
@@ -1,7 +1,10 @@
 .hero {
-  @include breakpoint-up(large) {
-    display: flex;
-    align-items: center;
+  background-color: $veryLightGray;
+  > .container {
+    @include breakpoint-up(large) {
+      display: flex;
+      align-items: center;
+    }
   }
   &__image {
     position: relative;
@@ -11,7 +14,7 @@
     background-position: center center;
     min-height: 17.5rem;
 
-    &::before {
+    &::after {
       content: "";
       background-image: url("../../images/image-mockups.png");
       background-size: 93%;
@@ -21,13 +24,26 @@
       width: 100%;
       height: 100%;
     }
-
+    &::before {
+      @include breakpoint-up(large) {
+        content: "";
+        position: absolute;
+        height: 100%;
+        background-image: url("/images/bg-intro-desktop.svg");
+        background-repeat: no-repeat;
+        background-position: center bottom;
+        width: 150%;
+        background-size: 122%;
+        background-position: 0% 83%;
+      }
+    }
     @include breakpoint-up(large) {
       flex: 3;
       order: 2;
-      min-height: 41rem;
-      background-image: url("../../images/bg-intro-desktop.svg");
-      background-position: left center;
+      height: 41rem;
+      background-image: none;
+      // background-image: url("../../images/bg-intro-desktop.svg");
+      // background-position: left center;
     }
   }
   &__text {
