--- a/easybank-landing-page-master/app/scss/_hero.scss
+++ b/easybank-landing-page-master/app/scss/_hero.scss
@@ -14,6 +14,10 @@
     background-position: center center;
     min-height: 17.5rem;
 
+    @include breakpoint-up(medium) {
+      min-height: 25rem;
+    }
+
     &::after {
       content: "";
       background-image: url("../../images/image-mockups.png");
@@ -23,6 +27,18 @@
       position: absolute;
       width: 100%;
       height: 100%;
+
+      @include breakpoint-up(medium) {
+        background-size: 52%;
+      }
+
+      @include breakpoint-up(large) {
+        width: 120%;
+        height: 122%;
+        background-size: 94%;
+        background-position: center 150%;
+        left: 22%;
+      }
     }
     &::before {
       @include breakpoint-up(large) {
