--- a/easybank-landing-page-master/app/scss/_feature.scss
+++ b/easybank-landing-page-master/app/scss/_feature.scss
@@ -1,4 +1,9 @@
 .feature {
+  background-color: $lightGrayishBlue;
+  text-align: center;
+  @include breakpoint-up(medium) {
+    text-align: left;
+  }
   &__intro {
     margin-bottom: 3.75rem;
     @include breakpoint-up(large) {
@@ -24,11 +29,26 @@
   }
 
   &__icon {
+    margin-bottom: 1.875rem;
+    @include breakpoint-up(large) {
+      margin-bottom: 2.75rem;
+    }
   }
 
   &__title {
-  }
+    font-size: 1.25rem;
+    font-weight: 300;
+    line-height: 1.15;
+    color: $darkBlue;
+    margin-bottom: 1rem;
 
+    @include breakpoint-up(large) {
+      font-size: 1.5rem;
+      margin-bottom: 1.5rem;
+    }
+  }
   &__description {
+    font-size: 0.875rem;
+    line-height: 1.5;
   }
 }
