--- a/easybank-landing-page-master/app/scss/_globals.scss
+++ b/easybank-landing-page-master/app/scss/_globals.scss
@@ -17,6 +17,7 @@ body {
   font-size: $font-med;
   font-weight: 300;
   color: $grayishBlue;
+  min-height: 300vh;
 
   @include breakpoint-up(large) {
     font-size: $font-med;
@@ -76,24 +77,29 @@ button,
   margin: auto;
 
   &--pall {
-    padding-bottom: 2.25rem;
-    padding-top: 2.25rem;
-    padding-left: 1.5rem;
+    padding-top: 4.375rem;
     padding-right: 1.5rem;
+    padding-bottom: 4.375rem;
+    padding-left: 1.5rem;
+
+    @include breakpoint-up(large) {
+      padding-top: 6rem;
+      padding-bottom: 6rem;
+    }
   }
   &--py {
-    padding-bottom: 2.25rem;
-    padding-top: 2.25rem;
+    padding-bottom: 4.375rem;
+    padding-top: 4.375rem;
   }
   &--px {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
   }
   &--pt {
-    padding-top: 2.25rem;
+    padding-top: 4.375rem;
   }
   &--pb {
-    padding-bottom: 2.25rem;
+    padding-bottom: 4.375rem;
   }
   &--pl {
     padding-left: 1.5rem;
