--- a/easybank-landing-page-master/app/scss/_footer.scss
+++ b/easybank-landing-page-master/app/scss/_footer.scss
@@ -4,13 +4,17 @@
   padding: 2.5rem;
   text-align: center;
 
-  @include breakpoint-up(large) {
-    display: grid;
-    grid-template-columns: repeat(1, fr) 2fr;
-    grid-template-rows: repeat(2, 1fr);
-    grid-template-areas:
-      "logo links1 links2 cta"
-      "social links1 link2 cta";
+  .container {
+    @include breakpoint-up(large) {
+      display: grid;
+      grid-template-columns: 2fr 1fr 1fr 3fr;
+      grid-template-rows: 1fr auto;
+      grid-template-areas:
+        "logo links1 links2 cta"
+        "social links1 links2 copyright";
+      gap: 1rem;
+      justify-items: start;
+    }
   }
 
   a {
@@ -18,8 +22,11 @@
   }
 
   &__logo {
-    margin-bottom: 1.875rem;
     display: inline-block;
+
+    @include breakpoint-down(medium) {
+      margin-bottom: 1.875rem;
+    }
 
     @include breakpoint-up(large) {
       grid-area: logo;
@@ -27,12 +34,26 @@
   }
 
   &__social {
-    margin-bottom: 1.875rem;
+    @include breakpoint-down(medium) {
+      margin-bottom: 1.875rem;
+    }
+
     @include breakpoint-up(large) {
       grid-area: social;
+      align-self: end;
     }
+
     a {
       display: inline-block;
+      height: 1.25rem;
+
+      svg path {
+        transition: fill 150ms ease-in-out;
+      }
+
+      &:hover svg path {
+        fill: $limeGreen;
+      }
     }
 
     a:not(:last-child) {
@@ -44,16 +65,35 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    line-height: 2;
+    font-size: 0.9375rem;
+
+    @include breakpoint-up(large) {
+      justify-content: space-between;
+      align-items: start;
+    }
+
     &.col1 {
       @include breakpoint-up(large) {
         grid-area: links1;
       }
     }
+
     &.col2 {
-      margin-bottom: 1.875rem;
+      @include breakpoint-down(medium) {
+        margin-bottom: 1.875rem;
+      }
+
       @include breakpoint-up(large) {
         grid-area: links2;
+      }
+    }
+
+    a {
+      line-height: 2.25;
+      transition: color 150ms ease-in-out;
+
+      &:hover {
+        color: $limeGreen;
       }
     }
   }
@@ -61,12 +101,25 @@
   &__cta {
     @include breakpoint-up(large) {
       grid-area: cta;
+      text-align: right;
+      justify-self: end;
     }
+
     a.button {
-      margin-bottom: 1.875rem;
+      @include breakpoint-down(medium) {
+        margin-bottom: 1.875rem;
+      }
     }
   }
 
   &__copyright {
+    font-size: 0.8125rem;
+    color: $grayishBlue;
+
+    @include breakpoint-up(large) {
+      grid-area: copyright;
+      align-self: end;
+      justify-self: end;
+    }
   }
 }
