--- a/ecommerce-next/src/app/globals.css
+++ b/ecommerce-next/src/app/globals.css
@@ -2,6 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --primary-color: hsl(26, 100%, 55%);
+  --primary-color-light: hsl(25, 100%, 94%);
+  --dark-grayish-blue: hsl(220, 13%, 13%);
+  --dark-grayish-blue-2: hsl(219, 9%, 45%);
+  --grayish-blue: hsl(220, 14%, 75%);
+  --light-grayish-blue: hsl(223, 64%, 98%);
+  --white: hsl(0, 0%, 100%);
+  --black-lightbox: hsla(0, 0%, 0%, 0.75);
+}
+
 *,
 *::after,
 *::before {
