Mobile Responsive + style cleaning

--- a/ecommerce-next/src/app/globals.css
+++ b/ecommerce-next/src/app/globals.css
@@ -48,3 +48,32 @@ li {
   opacity: 0;
   transition: opacity 300ms ease-in-out;
 }
+
+@layer components {
+  .slider-btn {
+    @apply hidden max-md:block cursor-pointer z-10 absolute top-[50%]  bg-white p-3 rounded-[100%];
+  }
+
+  .product-main-section {
+    @apply max-lg:flex-col flex items-center max-xl:gap-6 gap-20 my-20 mx-10 max-md:my-0 max-md:mx-0;
+  }
+
+  .main-product-image {
+    @apply relative h-[450px] w-[90%] max-md:w-[100%];
+  }
+
+  .product-images-slider {
+    @apply max-md:hidden mt-5 flex gap-4 w-[90%] items-center justify-between;
+  }
+
+  .navbar {
+    @apply flex items-center justify-between py-10 border-b-[1px] max-md:px-10  max-md:border-none;
+  }
+  .desktop-navlinks {
+    @apply flex items-center gap-10  max-lg:gap-4 justify-between text-[color:var(--grayish-blue)] tracking-tighter;
+  }
+
+  .mobile-navlinks {
+    @apply m-10 flex items-start gap-10 font-[700] text-xl flex-col;
+  }
+}
