--- a/ecommerce-next/src/app/globals.css
+++ b/ecommerce-next/src/app/globals.css
@@ -51,7 +51,11 @@ li {
 
 @layer components {
   .slider-btn {
-    @apply hidden max-md:block cursor-pointer z-10 absolute top-[50%]  bg-white p-3 rounded-[100%];
+    @apply hidden max-md:block cursor-pointer z-10 absolute top-[50%]  bg-white w-11 h-11 items-center justify-center rounded-[100%];
+  }
+
+  .slider-btn-gallery {
+    @apply max-md:hidden cursor-pointer absolute top-[50%]  bg-white w-11 h-11 flex items-center justify-center rounded-[100%];
   }
 
   .product-main-section {
