--- a/multi-step-form-main/src/app/globals.css
+++ b/multi-step-form-main/src/app/globals.css
@@ -18,6 +18,19 @@
   --white: hsl(0, 0%, 100%);
 }
 
+*,
+*::before,
+*::after {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 body {
   font-family: 'Ubuntu', sans-serif;
+}
+
+.desktop-left-side {
+  background: url('../../public/images/bg-sidebar-desktop.svg') no-repeat
+    center/cover;
 }
