added mobile nav and footer

--- a/multi-step-form-main/src/app/globals.css
+++ b/multi-step-form-main/src/app/globals.css
@@ -27,11 +27,16 @@
 }
 
 body {
-  font-family: 'Ubuntu', sans-serif;
+  font-family: "Ubuntu", sans-serif;
 }
 
 .desktop-left-side {
-  background: url('../../public/images/bg-sidebar-desktop.svg') no-repeat
+  background: url("../../public/images/bg-sidebar-desktop.svg") no-repeat
+    center/cover;
+}
+
+.desktop-mobile-top {
+  background: url("../../public/images/bg-sidebar-mobile.svg") no-repeat
     center/cover;
 }
 
@@ -52,7 +57,7 @@ body {
 }
 
 .btn-primary {
-  @apply bg-[color:var(--purplish-blue)] ml-auto font-bold cursor-pointer px-5 py-3 max-lg:text-sm max-lg:px-4 max-lg:py-2 text-white  whitespace-nowrap rounded-md;
+  @apply bg-[color:var(--purplish-blue)] ml-auto font-bold cursor-pointer px-5 py-3 md:text-sm md:px-4 md:py-2 text-white  whitespace-nowrap rounded-md;
 }
 
 .btn-secondary {
@@ -61,4 +66,8 @@ body {
 
 .step-number {
   @apply border-2   border-[color:var(--light-gray)] rounded-full flex items-center justify-center p-4 w-3 h-3;
+}
+
+.step-number-mobile {
+  @apply border-2   border-[color:var(--light-gray)] rounded-full flex items-center justify-center p-5 w-10 h-10;
 }
