--- a/multi-step-form-main/src/app/globals.css
+++ b/multi-step-form-main/src/app/globals.css
@@ -57,7 +57,7 @@ body {
 }
 
 .btn-primary {
-  @apply bg-[color:var(--purplish-blue)] ml-auto font-bold cursor-pointer px-5 py-3 md:text-sm md:px-4 md:py-2 text-white  whitespace-nowrap rounded-md;
+  @apply bg-[color:var(--purplish-blue)] ml-auto font-bold cursor-pointer px-5 py-3 max-md:text-sm max-md:px-4 max-md:py-2 text-white  whitespace-nowrap rounded-md;
 }
 
 .btn-secondary {
